--- a/frontend/src/Pages/CSS/shopCategory.css
+++ b/frontend/src/Pages/CSS/shopCategory.css
@@ -46,7 +46,7 @@
   gap: 1.25rem;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: normal;
   width: 100%;
   margin: 2rem auto;
 }
