--- a/frontend/src/Pages/CSS/loginSignup.css
+++ b/frontend/src/Pages/CSS/loginSignup.css
@@ -53,6 +53,15 @@
   margin-top: 30px;
 }
 
+.password-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
 .login-signup-form input {
   width: 100%;
   height: 50px;
@@ -64,8 +73,27 @@
   outline: none;
 }
 
+.login-signup-form input:focus {
+  border-color: #ff4141;
+}
+
 .login-signup-form input::placeholder {
   color: #c9c9c9;
+}
+
+.password-container span {
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+}
+
+.password-container span svg {
+  font-size: 1.5rem;
+  color: #c9c9c9;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-signup-form button {
